Resolved defect #773935 to better align the price alert text

--- a/webroot/skin/frontend/blueacorn/mis/scss/module/_catalog-product.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/module/_catalog-product.scss
@@ -665,6 +665,7 @@
     .alert-price,
     .alert-stock {
         clear: both;
+        padding: 20px 0 0 20px;
     }
 }
 
